# EasyBuilderMacroGenerator

./: .gitignore  LICENSE  ReadMe.md  pyproject.toml  requirements.txt  test_install
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
docs/: index.md
docs/api/: 01-getting-started.md  02-syntax.md  03-instructions.md  04-how-does-it-work.md  05-tags-generator.md  getting-started.md  syntax.md
docs/tools/: combine-tags.md  koyo-tags-import.md
examples/: simple.py
src/eb_macro_gen/: common.py  dynamic_drawing.py  hmi_instructions.py  instructions.py  objects.py  syntax.py
src/eb_macro_gen/plcs/: __init__.py  koyo.py  rockwell.py
src/eb_macro_gen/tools/: __init__.py  combine_tags.py  instruction_generator.py  io.py  koyo_tags_import.py  merge.py  recipe_import.py  reporting.py
tests/: test_combine_tools.py  test_objects.py  test_reverse_operators.py  test_syntax_regressions.py
tests/tags/: hmi_tags0.csv  hmi_tags1.csv  hmi_tags2.csv  koyo_tags.csv  tags1.csv
